<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.raspmusicstationclient.MainActivity" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >  
                
                    <ViewSwitcher
                        android:id="@+id/tab02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >
                        
                          <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical" >

                             <TextView
                                 android:id="@+id/textView1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/labelLists"
                                 android:textAppearance="?android:attr/textAppearanceLarge" />

                             <ListView
                                 android:id="@+id/listLists"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" >
                             </ListView>

                         </LinearLayout>
                        
                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical" >

                               
                              <LinearLayout
		                         android:layout_width="match_parent"
		                         android:layout_height="wrap_content"
		                         android:orientation="horizontal" >

	                             <Button
	                                 android:id="@+id/btnReturn2Lists"
	                                 android:layout_width="45dp"
				                     android:layout_height="45dp"
	                                 android:background="@drawable/back" />
	                             
	                             <Button
			                           android:id="@+id/btnPlayList"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/play"/>
			
			                       <Button
			                           android:id="@+id/btnStopList"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/stop" />
			                       
			                       <Button
			                           android:id="@+id/btnPrevSong"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/prev" />
			
			                       <Button
			                           android:id="@+id/btnNextSong"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/next" />
			
			                       <Button
			                           android:id="@+id/btnVolDownList"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/down" />
			
			                       <Button
			                           android:id="@+id/btnVolUpList"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/up" />
			                       
	                           </LinearLayout>
	                           
                               <TextView
                                 android:id="@+id/listTitle"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text=""
                                 android:textAppearance="?android:attr/textAppearanceLarge" />
	                           
                                <ListView
                                 android:id="@+id/listSongs"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" >
                             </ListView>

                         </LinearLayout>
                         
                        
                    </ViewSwitcher>

               
                  <LinearLayout
                    android:id="@+id/tab04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/powerControl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/btnReboot"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:drawableLeft="@drawable/reboot"
                            android:text="@string/btnRebootText" />

                        <Button
                            android:id="@+id/btnShutdown"
                            android:layout_width="wrap_content"
                            android:layout_height="55dp"
                            android:drawableLeft="@drawable/shutdown"
                            android:text="@string/btnShutdownText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/hostSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textViewHost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/labelHost" />

                        <EditText
                            android:id="@+id/editTextHost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10" >

                            <requestFocus />
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/homepageSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textViewHomePage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/labelHomePage" />

                        <EditText
                            android:id="@+id/editTextHomePage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10" />
                    </LinearLayout>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

	                    <ToggleButton
	                        android:id="@+id/btnListenIP"
	                        android:layout_width="wrap_content"
	                        android:layout_height="55dp"
	                        android:drawableLeft="@drawable/listen"
	                        android:textOn="@string/btnListenIPOn" 
	                        android:textOff="@string/btnListenIPText" />
	                    
	                     <Button
	                        android:id="@+id/btnSave"
	                        android:layout_width="wrap_content"
	                        android:layout_height="55dp"
	                        android:drawableLeft="@drawable/save"
	                        android:text="@string/btnSaveText" />
	                    
                    </LinearLayout>

                </LinearLayout>
                
               
                
                <LinearLayout
                    android:id="@+id/tab03"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" 
                    android:orientation="vertical">
                    
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal" >
                          <ImageView
			                   android:id="@+id/cdImage"
			                   android:layout_width="wrap_content"
			                   android:layout_height="wrap_content"
			                   android:src="@drawable/cdstop" 
			                   />
                       
                          <LinearLayout
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:orientation="vertical" >

			                  <LinearLayout
			                      android:layout_width="wrap_content"
			                      android:layout_height="wrap_content" >
			
			                       <Button
			                           android:id="@+id/btnPrevTrack"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/prev" />
			
			                       <Button
			                           android:id="@+id/btnNextTrack"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/next" />
			
			                       <Button
			                           android:id="@+id/btnVolDownCD"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/down" />
			
			                       <Button
			                           android:id="@+id/btnVolUpCD"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/up" />
			
			                   </LinearLayout>
			                   
			                   <LinearLayout
			                       android:layout_width="wrap_content"
			                       android:layout_height="wrap_content" >
			                       
			                       <Button
			                           android:id="@+id/btnRefreshCD"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/refresh" />
			
			                       <Button
			                           android:id="@+id/btnPlayCD"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/play"/>
			
			                       <Button
			                           android:id="@+id/btnStopCD"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/stop" />
			
			                       <Button
			                           android:id="@+id/btnEject"
			                           android:layout_width="45dp"
			                           android:layout_height="45dp"
			                           android:background="@drawable/eject" />			                       
          
			                   </LinearLayout>
			                   
			               </LinearLayout>

			              
                          
			           </LinearLayout>
                   
                    <ProgressBar
                       android:id="@+id/progressCD"
                       style="?android:attr/progressBarStyleHorizontal"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content" />

                   <ListView
                       android:id="@+id/listTracks"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent" >
                   </ListView>
                  

                </LinearLayout>
                
                 <LinearLayout
                    android:id="@+id/tab01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                    
                    <LinearLayout
                        android:id="@+id/playBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/btnPrev"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/prev"
                            />
                        
                        <Button
                            android:id="@+id/btnNext"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/next"
                            />

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/sound" />
                        
                         <Button
                             android:id="@+id/btnVolDown"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:background="@drawable/down" />
                         
                         <Button
                             android:id="@+id/btnVolUp"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:background="@drawable/up" />
                        
                         <Button
                             android:id="@+id/btnStop"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:background="@drawable/stop"
                             />

                    </LinearLayout>
                        
                    
                    <WebView  
                        android:id="@+id/webview"
                        android:layout_width="match_parent"    
                        android:layout_height="match_parent" />
                    
                </LinearLayout>

              
                
                 
               

            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
